--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,7 +28,9 @@ layer(base);
     h1,
     h2,
     h3,
-    h4,
+    h4{
+        font-size: 1.125rem; /* Change this to your desired size */
+      }
     h5,
     h6 {
         @apply break-words;
