--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,12 +29,15 @@ layer(base);
     h2,
     h3,
     h4{
-        font-size: 0.875rem; /* Change this to your desired size */
+        font-size: 1.15rem; /* Change this to your desired size */
       }
-    h5,
+    h5{
+        font-size: 1.0rem; /* Change this to your desired size */
+      }
     h6 {
         @apply break-words;
         line-height: 0.9;
+        font-size: 0.875rem; /* Change this to your desired size */
         font-weight: var(--theme-heading-weight);
         text-transform: var(--theme-heading-case);
     }
